tests/errors/generic_struct_ref_field.vt
struct Pair<A, B> { a: A; b: B; }
fn main() { let p = Pair<int, string>(1, "x"); print(str(p.a)); }
